# stipple

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  pyproject.toml
examples/: dedup.ipynb  demo_fineweb_10m.ipynb  demo_fineweb_1m.ipynb  demo_fineweb_paint.ipynb  embeddings.ipynb  g0_smoke.ipynb  g1_smoke.ipynb  g2_smoke.ipynb  g3_smoke.ipynb  g4_smoke.ipynb  p1_dataframe_smoke.ipynb  p2_continuous_smoke.ipynb  p51a_25m_smoke.ipynb  p51b_100m_smoke.ipynb  p51b_tpch_smoke.ipynb  p5_density_smoke.ipynb
js/: package-lock.json  package.json  tsconfig.json  vite.config.ts
js/src/: index.ts  shaders.ts
scripts/: probe_examples.py  probe_fineweb.py  probe_g0.py  probe_g1.py  probe_g2.py  probe_g3.py  probe_g4.py  probe_lasso_matrix.py  probe_p1.py  probe_p2.py  probe_p3.py  probe_p4.py  probe_p5.py  probe_p51a.py  probe_p51b.py  probe_paint.py  record_fineweb_demo.py
src/stipple/: __init__.py  _palettes.py  widget.py
src/stipple/_static/: index.js  index.js.map
