[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stipple"
version = "0.1.0"
description = "WebGPU scatter widget for Jupyter — render millions of points, lasso, return row indices to Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Steve Ledbetter", email = "smledbetter@gmail.com" }]
keywords = ["jupyter", "anywidget", "webgpu", "scatter", "visualization", "ml", "lasso"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "anywidget>=0.9",
    "traitlets>=5",
    "numpy>=1.26",
    "pyarrow>=15",
]

[project.urls]
Homepage = "https://github.com/smledbetter/stipple"
Repository = "https://github.com/smledbetter/stipple"
Issues = "https://github.com/smledbetter/stipple/issues"
Changelog = "https://github.com/smledbetter/stipple/releases"

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.4",
    "ipywidgets>=8.1",
    "pandas>=2.2",
    "ruff>=0.5",
    "pytest>=8",
    "playwright>=1.55",
    "build>=1.2",
    "twine>=5.0",
]
examples = [
    "scikit-learn>=1.4",
    "ipywidgets>=8.1",
    "jupyterlab>=4.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stipple"]

[tool.hatch.build]
artifacts = ["src/stipple/_static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
